--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "grunt": "~0.3.17",
     "weinre": "~2.0.0-pre-H9PU2WST-incubating",
     "grunt-contrib-requirejs": "~0.3.3",
-    "grunt-contrib-sass": "~0.2.1"
+    "grunt-contrib-sass": "~0.2.1",
+    "grunt-contrib-less": "~0.3.2",
+    "grunt-contrib-clean": "~0.4.0a"
   },
   "devDependencies": {},
   "scripts": {
